--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,30 +58,29 @@ jobs:
           echo "Setting legacy VNC password..."
           
           # -----------------------------------------------------------------
-          # KITA PAKAI INI. Ini mengatur password VNC, BUKAN password user
+          # 1. Mengatur Password VNC (Ini berhasil)
           printf "%s" "$VNC_PASSWORD" | perl -we 'BEGIN { @k = unpack "C*", pack "H*", "1734516E8BA8C5E2FF1C39567390ADCA"}; $_ = <>; chomp; s/^(.{8}).*/$1/; @p = unpack "C*", $_; foreach (@k) { printf "%02X", $_ ^ (shift @p || 0) }; print "\n"' | sudo tee /Library/Preferences/com.apple.VNCSettings.txt > /dev/null
           # -----------------------------------------------------------------
           
           echo "Skipping user password setup..."
-          # Perintah 'dscl' yang gagal kita hapus
           
           echo "Activating ARD/VNC..."
-          # Kita gunakan perintah kickstart yang sama persis dengan yang kamu suka
-          # Meskipun '-login' gagal, bagian '-activate' dan '-restart' akan jalan
-          # dan membangunkan GUI.
+          # -----------------------------------------------------------------
+          # 2. Menyalakan VNC (Ini berhasil dan menyalakan GUI)
+          # PERBAIKAN: Menghapus 3 baris '-login', '-name', '-password' yang ERROR
           sudo /System/Library/CoreServices/RemoteManagement/ARDAgent.app/Contents/Resources/kickstart \
             -activate \
             -configure -allowAccessFor -allUsers \
             -configure -access -on \
             -configure -privs -all \
             -configure -clientopts -setvnclegacy -vnclegacy yes \
-            -restart -agent -console \
-            -login -name runner -password "$VNC_PASSWORD"
+            -restart -agent -console
+          # -----------------------------------------------------------------
           
           # Pastikan service-nya berjalan
           sudo launchctl load -w /System/Library/LaunchDaemons/com.apple.screensharing.plist 2>/dev/null || true
           
-          echo "✓ VNC setup and GUI login initiated."
+          echo "✓ VNC setup initiated."
           echo "Waiting 15s for GUI session to stabilize..."
           sleep 15
 
